--- a/project.yaml
+++ b/project.yaml
@@ -73,7 +73,7 @@ actions:
         csv: output/geography/*.csv
 
   ## # # # # # # # # # # # # # # # # # # # 
-  ## Matching 
+  ## matching set A 
   ## # # # # # # # # # # # # # # # # # # # 
 
   match_A:
@@ -98,9 +98,6 @@ actions:
         png: output/match/A/report/*.png
         html: output/match/A/report/*.html
 
-  ## # # # # # # # # # # # # # # # # # # # 
-  ## matching set A 
-  ## # # # # # # # # # # # # # # # # # # # 
   ## ### Overall models (''all'') 
 
   km_A_all_postest:
@@ -441,6 +438,508 @@ actions:
         csv: output/match/A/km/age65plus/noncoviddeath/*.csv
         png: output/match/A/km/age65plus/noncoviddeath/*.png
 
+  ## ### Models by variant era (''variantera'') 
+
+  km_A_variantera_postest:
+    run: r:latest analysis/km.R A variantera postest
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/postest/*.txt
+        csv: output/match/A/km/variantera/postest/*.csv
+        png: output/match/A/km/variantera/postest/*.png
+
+  km_A_variantera_covidemergency:
+    run: r:latest analysis/km.R A variantera covidemergency
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/covidemergency/*.txt
+        csv: output/match/A/km/variantera/covidemergency/*.csv
+        png: output/match/A/km/variantera/covidemergency/*.png
+
+  km_A_variantera_covidadmittedproxy1:
+    run: r:latest analysis/km.R A variantera covidadmittedproxy1
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/covidadmittedproxy1/*.txt
+        csv: output/match/A/km/variantera/covidadmittedproxy1/*.csv
+        png: output/match/A/km/variantera/covidadmittedproxy1/*.png
+
+  km_A_variantera_covidadmitted:
+    run: r:latest analysis/km.R A variantera covidadmitted
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/covidadmitted/*.txt
+        csv: output/match/A/km/variantera/covidadmitted/*.csv
+        png: output/match/A/km/variantera/covidadmitted/*.png
+
+  km_A_variantera_coviddeath:
+    run: r:latest analysis/km.R A variantera coviddeath
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/coviddeath/*.txt
+        csv: output/match/A/km/variantera/coviddeath/*.csv
+        png: output/match/A/km/variantera/coviddeath/*.png
+
+  km_A_variantera_noncoviddeath:
+    run: r:latest analysis/km.R A variantera noncoviddeath
+    needs:
+    - match_A
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/A/km/variantera/noncoviddeath/*.txt
+        csv: output/match/A/km/variantera/noncoviddeath/*.csv
+        png: output/match/A/km/variantera/noncoviddeath/*.png
+
+  ## # # # # # # # # # # # # # # # # # # # 
+  ## matching set B 
+  ## # # # # # # # # # # # # # # # # # # # 
+
+  match_B:
+    run: r:latest analysis/match.R B
+    needs:
+    - data_selection
+    outputs:
+      highly_sensitive:
+        rds: output/match/B/*.rds
+      moderately_sensitive:
+        txt: output/match/B/*.txt
+
+  match_report_B:
+    run: r:latest analysis/match_report.R B
+    needs:
+    - data_selection
+    - match_B
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/report/*.txt
+        csv: output/match/B/report/*.csv
+        png: output/match/B/report/*.png
+        html: output/match/B/report/*.html
+
+  ## ### Overall models (''all'') 
+
+  km_B_all_postest:
+    run: r:latest analysis/km.R B all postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/postest/*.txt
+        csv: output/match/B/km/all/postest/*.csv
+        png: output/match/B/km/all/postest/*.png
+
+  km_B_all_covidemergency:
+    run: r:latest analysis/km.R B all covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/covidemergency/*.txt
+        csv: output/match/B/km/all/covidemergency/*.csv
+        png: output/match/B/km/all/covidemergency/*.png
+
+  km_B_all_covidadmittedproxy1:
+    run: r:latest analysis/km.R B all covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/all/covidadmittedproxy1/*.csv
+        png: output/match/B/km/all/covidadmittedproxy1/*.png
+
+  km_B_all_covidadmitted:
+    run: r:latest analysis/km.R B all covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/covidadmitted/*.txt
+        csv: output/match/B/km/all/covidadmitted/*.csv
+        png: output/match/B/km/all/covidadmitted/*.png
+
+  km_B_all_coviddeath:
+    run: r:latest analysis/km.R B all coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/coviddeath/*.txt
+        csv: output/match/B/km/all/coviddeath/*.csv
+        png: output/match/B/km/all/coviddeath/*.png
+
+  km_B_all_noncoviddeath:
+    run: r:latest analysis/km.R B all noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/all/noncoviddeath/*.txt
+        csv: output/match/B/km/all/noncoviddeath/*.csv
+        png: output/match/B/km/all/noncoviddeath/*.png
+
+  ## ### Models by primary course (''vax12_type'') 
+
+  km_B_vax12_type_postest:
+    run: r:latest analysis/km.R B vax12_type postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/postest/*.txt
+        csv: output/match/B/km/vax12_type/postest/*.csv
+        png: output/match/B/km/vax12_type/postest/*.png
+
+  km_B_vax12_type_covidemergency:
+    run: r:latest analysis/km.R B vax12_type covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/covidemergency/*.txt
+        csv: output/match/B/km/vax12_type/covidemergency/*.csv
+        png: output/match/B/km/vax12_type/covidemergency/*.png
+
+  km_B_vax12_type_covidadmittedproxy1:
+    run: r:latest analysis/km.R B vax12_type covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/vax12_type/covidadmittedproxy1/*.csv
+        png: output/match/B/km/vax12_type/covidadmittedproxy1/*.png
+
+  km_B_vax12_type_covidadmitted:
+    run: r:latest analysis/km.R B vax12_type covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/covidadmitted/*.txt
+        csv: output/match/B/km/vax12_type/covidadmitted/*.csv
+        png: output/match/B/km/vax12_type/covidadmitted/*.png
+
+  km_B_vax12_type_coviddeath:
+    run: r:latest analysis/km.R B vax12_type coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/coviddeath/*.txt
+        csv: output/match/B/km/vax12_type/coviddeath/*.csv
+        png: output/match/B/km/vax12_type/coviddeath/*.png
+
+  km_B_vax12_type_noncoviddeath:
+    run: r:latest analysis/km.R B vax12_type noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/vax12_type/noncoviddeath/*.txt
+        csv: output/match/B/km/vax12_type/noncoviddeath/*.csv
+        png: output/match/B/km/vax12_type/noncoviddeath/*.png
+
+  ## ### Models by clinically vulnerable group (''cev_cv'') 
+
+  km_B_cev_cv_postest:
+    run: r:latest analysis/km.R B cev_cv postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/postest/*.txt
+        csv: output/match/B/km/cev_cv/postest/*.csv
+        png: output/match/B/km/cev_cv/postest/*.png
+
+  km_B_cev_cv_covidemergency:
+    run: r:latest analysis/km.R B cev_cv covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/covidemergency/*.txt
+        csv: output/match/B/km/cev_cv/covidemergency/*.csv
+        png: output/match/B/km/cev_cv/covidemergency/*.png
+
+  km_B_cev_cv_covidadmittedproxy1:
+    run: r:latest analysis/km.R B cev_cv covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/cev_cv/covidadmittedproxy1/*.csv
+        png: output/match/B/km/cev_cv/covidadmittedproxy1/*.png
+
+  km_B_cev_cv_covidadmitted:
+    run: r:latest analysis/km.R B cev_cv covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/covidadmitted/*.txt
+        csv: output/match/B/km/cev_cv/covidadmitted/*.csv
+        png: output/match/B/km/cev_cv/covidadmitted/*.png
+
+  km_B_cev_cv_coviddeath:
+    run: r:latest analysis/km.R B cev_cv coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/coviddeath/*.txt
+        csv: output/match/B/km/cev_cv/coviddeath/*.csv
+        png: output/match/B/km/cev_cv/coviddeath/*.png
+
+  km_B_cev_cv_noncoviddeath:
+    run: r:latest analysis/km.R B cev_cv noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/cev_cv/noncoviddeath/*.txt
+        csv: output/match/B/km/cev_cv/noncoviddeath/*.csv
+        png: output/match/B/km/cev_cv/noncoviddeath/*.png
+
+  ## ### Models by prior infection (''prior_covid_infection'') 
+
+  km_B_prior_covid_infection_postest:
+    run: r:latest analysis/km.R B prior_covid_infection postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/postest/*.txt
+        csv: output/match/B/km/prior_covid_infection/postest/*.csv
+        png: output/match/B/km/prior_covid_infection/postest/*.png
+
+  km_B_prior_covid_infection_covidemergency:
+    run: r:latest analysis/km.R B prior_covid_infection covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/covidemergency/*.txt
+        csv: output/match/B/km/prior_covid_infection/covidemergency/*.csv
+        png: output/match/B/km/prior_covid_infection/covidemergency/*.png
+
+  km_B_prior_covid_infection_covidadmittedproxy1:
+    run: r:latest analysis/km.R B prior_covid_infection covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/prior_covid_infection/covidadmittedproxy1/*.csv
+        png: output/match/B/km/prior_covid_infection/covidadmittedproxy1/*.png
+
+  km_B_prior_covid_infection_covidadmitted:
+    run: r:latest analysis/km.R B prior_covid_infection covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/covidadmitted/*.txt
+        csv: output/match/B/km/prior_covid_infection/covidadmitted/*.csv
+        png: output/match/B/km/prior_covid_infection/covidadmitted/*.png
+
+  km_B_prior_covid_infection_coviddeath:
+    run: r:latest analysis/km.R B prior_covid_infection coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/coviddeath/*.txt
+        csv: output/match/B/km/prior_covid_infection/coviddeath/*.csv
+        png: output/match/B/km/prior_covid_infection/coviddeath/*.png
+
+  km_B_prior_covid_infection_noncoviddeath:
+    run: r:latest analysis/km.R B prior_covid_infection noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/prior_covid_infection/noncoviddeath/*.txt
+        csv: output/match/B/km/prior_covid_infection/noncoviddeath/*.csv
+        png: output/match/B/km/prior_covid_infection/noncoviddeath/*.png
+
+  ## ### Models by age (''age65plus'') 
+
+  km_B_age65plus_postest:
+    run: r:latest analysis/km.R B age65plus postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/postest/*.txt
+        csv: output/match/B/km/age65plus/postest/*.csv
+        png: output/match/B/km/age65plus/postest/*.png
+
+  km_B_age65plus_covidemergency:
+    run: r:latest analysis/km.R B age65plus covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/covidemergency/*.txt
+        csv: output/match/B/km/age65plus/covidemergency/*.csv
+        png: output/match/B/km/age65plus/covidemergency/*.png
+
+  km_B_age65plus_covidadmittedproxy1:
+    run: r:latest analysis/km.R B age65plus covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/age65plus/covidadmittedproxy1/*.csv
+        png: output/match/B/km/age65plus/covidadmittedproxy1/*.png
+
+  km_B_age65plus_covidadmitted:
+    run: r:latest analysis/km.R B age65plus covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/covidadmitted/*.txt
+        csv: output/match/B/km/age65plus/covidadmitted/*.csv
+        png: output/match/B/km/age65plus/covidadmitted/*.png
+
+  km_B_age65plus_coviddeath:
+    run: r:latest analysis/km.R B age65plus coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/coviddeath/*.txt
+        csv: output/match/B/km/age65plus/coviddeath/*.csv
+        png: output/match/B/km/age65plus/coviddeath/*.png
+
+  km_B_age65plus_noncoviddeath:
+    run: r:latest analysis/km.R B age65plus noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/age65plus/noncoviddeath/*.txt
+        csv: output/match/B/km/age65plus/noncoviddeath/*.csv
+        png: output/match/B/km/age65plus/noncoviddeath/*.png
+
+  ## ### Models by variant era (''variantera'') 
+
+  km_B_variantera_postest:
+    run: r:latest analysis/km.R B variantera postest
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/postest/*.txt
+        csv: output/match/B/km/variantera/postest/*.csv
+        png: output/match/B/km/variantera/postest/*.png
+
+  km_B_variantera_covidemergency:
+    run: r:latest analysis/km.R B variantera covidemergency
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/covidemergency/*.txt
+        csv: output/match/B/km/variantera/covidemergency/*.csv
+        png: output/match/B/km/variantera/covidemergency/*.png
+
+  km_B_variantera_covidadmittedproxy1:
+    run: r:latest analysis/km.R B variantera covidadmittedproxy1
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/covidadmittedproxy1/*.txt
+        csv: output/match/B/km/variantera/covidadmittedproxy1/*.csv
+        png: output/match/B/km/variantera/covidadmittedproxy1/*.png
+
+  km_B_variantera_covidadmitted:
+    run: r:latest analysis/km.R B variantera covidadmitted
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/covidadmitted/*.txt
+        csv: output/match/B/km/variantera/covidadmitted/*.csv
+        png: output/match/B/km/variantera/covidadmitted/*.png
+
+  km_B_variantera_coviddeath:
+    run: r:latest analysis/km.R B variantera coviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/coviddeath/*.txt
+        csv: output/match/B/km/variantera/coviddeath/*.csv
+        png: output/match/B/km/variantera/coviddeath/*.png
+
+  km_B_variantera_noncoviddeath:
+    run: r:latest analysis/km.R B variantera noncoviddeath
+    needs:
+    - match_B
+    - data_selection
+    outputs:
+      moderately_sensitive:
+        txt: output/match/B/km/variantera/noncoviddeath/*.txt
+        csv: output/match/B/km/variantera/noncoviddeath/*.csv
+        png: output/match/B/km/variantera/noncoviddeath/*.png
+
   ## # # # # # # # # # # # # # # # # # # # 
   ## Combine KM estimates across outcomes and subgroups 
   ## # # # # # # # # # # # # # # # # # # # 
@@ -478,9 +977,58 @@ actions:
     - km_A_cev_cv_covidadmitted
     - km_A_cev_cv_coviddeath
     - km_A_cev_cv_noncoviddeath
+    - km_A_variantera_postest
+    - km_A_variantera_covidemergency
+    - km_A_variantera_covidadmittedproxy1
+    - km_A_variantera_covidadmitted
+    - km_A_variantera_coviddeath
+    - km_A_variantera_noncoviddeath
     outputs:
       moderately_sensitive:
         csv: output/match/A/km/combined/*.csv
+
+  km_combine_B:
+    run: r:latest analysis/km_combine.R B
+    needs:
+    - km_B_all_postest
+    - km_B_all_covidemergency
+    - km_B_all_covidadmittedproxy1
+    - km_B_all_covidadmitted
+    - km_B_all_coviddeath
+    - km_B_all_noncoviddeath
+    - km_B_vax12_type_postest
+    - km_B_vax12_type_covidemergency
+    - km_B_vax12_type_covidadmittedproxy1
+    - km_B_vax12_type_covidadmitted
+    - km_B_vax12_type_coviddeath
+    - km_B_vax12_type_noncoviddeath
+    - km_B_prior_covid_infection_postest
+    - km_B_prior_covid_infection_covidemergency
+    - km_B_prior_covid_infection_covidadmittedproxy1
+    - km_B_prior_covid_infection_covidadmitted
+    - km_B_prior_covid_infection_coviddeath
+    - km_B_prior_covid_infection_noncoviddeath
+    - km_B_age65plus_postest
+    - km_B_age65plus_covidemergency
+    - km_B_age65plus_covidadmittedproxy1
+    - km_B_age65plus_covidadmitted
+    - km_B_age65plus_coviddeath
+    - km_B_age65plus_noncoviddeath
+    - km_B_cev_cv_postest
+    - km_B_cev_cv_covidemergency
+    - km_B_cev_cv_covidadmittedproxy1
+    - km_B_cev_cv_covidadmitted
+    - km_B_cev_cv_coviddeath
+    - km_B_cev_cv_noncoviddeath
+    - km_B_variantera_postest
+    - km_B_variantera_covidemergency
+    - km_B_variantera_covidadmittedproxy1
+    - km_B_variantera_covidadmitted
+    - km_B_variantera_coviddeath
+    - km_B_variantera_noncoviddeath
+    outputs:
+      moderately_sensitive:
+        csv: output/match/B/km/combined/*.csv
 
   ## # # # # # # # # # # # # # # # # # # # 
   ## Files for release 
@@ -491,6 +1039,7 @@ actions:
     needs:
     - data_selection
     - match_report_A
+    - match_report_B
     - km_combine_A
     outputs:
       moderately_sensitive:
