--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ venv/
 /write-up/figures/*
 /write-up/*.html
 /released-output/*
+write-up/comparative booster effectiveness - draft manuscript v0.1.docx
+write-up/comparative boosting effectiveness v0.1.docx
