--- a/project.yaml
+++ b/project.yaml
@@ -54,6 +54,7 @@ actions:
         criteriards: output/data/data_inclusioncriteria.rds
       moderately_sensitive:
         flow: output/prematch/flowchart.csv
+        table: output/prematch/table*.csv
 
   skim_selection:
     run: r:latest analysis/data_skim.R output/data/data_cohort.rds output/data_properties
