add ".R" to filename in project.yaml

--- a/project.yaml
+++ b/project.yaml
@@ -1195,7 +1195,7 @@ actions:
         cohort: output/input_ICD10check.feather
 
   report_ICD10check:
-    run: r:latest analysis/report_ICD10check
+    run: r:latest analysis/report_ICD10check.R
     needs:
     - extract_ICD10check
     outputs:
